fix(chat): 분석 카드 리뷰 반영 (#36)